Fix export btn overlapping console

--- a/theme/serial.less
+++ b/theme/serial.less
@@ -19,7 +19,7 @@
 }
 
 #serialArea {
-    height: 100%;
+    height: 90%;
     padding: 1rem;
 }
 
